@@ -1392,10 +1392,9 @@ decode_address (const char **in)
 	 * tokens that make up this name phrase.
 	 */
 	while (*inptr) {
-		if ((word = decode_word (&inptr)))
+		if ((word = decode_word (&inptr))) {
 			g_string_append_len (name, word, (size_t) (inptr - word));
-		
-		if (word) {
+			
 		check_lwsp:
 			word = inptr;
 			skip_lwsp (&inptr);
@@ -1450,7 +1449,7 @@ decode_address (const char **in)
 		} else if (*inptr == '(') {
 			/* beginning of a comment, use decode_lwsp() to skip past it */
 			decode_lwsp (&inptr);
-		} else if (strchr ("@,;", *inptr)) {
+		} else if (*inptr && strchr ("@,;", *inptr)) {
 			if (name->len == 0) {
 				if (*inptr == '@') {
 					GString *domain;
@@ -1505,6 +1504,8 @@ decode_address (const char **in)
 			inptr++;
 			
 			goto check_lwsp;
+		} else {
+			goto addrspec;
 		}
 	}
 	
